# haskellscratch

./: bitbucket-pipelines.yml  helloworld.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
