name:                helloworld
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jake Keuhlen
copyright:           2017 Jake Keuhlen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      ,text
  default-language:    Haskell2010

executable helloworld-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helloworld
  default-language:    Haskell2010

